@@ -219,7 +219,10 @@ pass out quick all keep state
 {{ node.pf_custom_config }}
 #######################
 
-#pass in quick proto udp from any to port 123
+{% for interface in carp_allowed_interfaces -%}
+# Allowed incoming CARP traffic on {{interface}}
+pass quick on {{interface}} proto carp
+{% endfor %}
 
 
 # Incoming traffic on Admin GUI
